--- a/domLabVending.css
+++ b/domLabVending.css
@@ -4,17 +4,19 @@ body {
     margin: auto;
 }
 
-h3 {
-    margin: 0px 15px;
+h1 {
+    text-align: center;
+    color: crimson;
 }
 
-.container {
+#container {
+    position: relative;
 	width: 270px;
-	height: 280px;
-    margin: 150px auto;
+	height: 300px;
+    margin: 100px auto;
 	border: 2px solid blue;
     border-radius: 5px;
-	padding: 20px 50px 50px;
+	padding: 15px 50px 50px;
 	background-color: #F0F0F0;
     box-shadow: 0px 5px 5px #5f5f5f, 5px 5px 10px #5f5f5f;
 }
@@ -35,8 +37,6 @@ button {
 }
 
 .lime {
-    
-/*    width: 200px;*/
 	float: left;
 	padding: 10px;
 	margin-right: 10px;
@@ -60,16 +60,31 @@ button {
 	margin-top: 20px;
 }
 
-input {
+#total {
     text-align: center;
     font-size: 18px;
     color: blue;
-    width: 250px;
     height: 30px;
-    margin: 15px 3px;
     border: 2px solid black;
-    border-radius: 5px;
+    border-radius: 10px;
+    margin: 15px;
+    padding-top: 5px;
     box-shadow: 0px 5px 5px #5f5f5f, 5px 5px 10px #5f5f5f;
+}
+
+#reset {
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: darkblue;
+    color: white;
+    width: 75px;
+    height: 30px;
+    margin: 15px auto;
+    padding: 0px;
+    font-size: 18px;
+    border: 1px solid black;
+    border-radius: 5px;
 }
 
 
